<resources>
    <string name="app_name">레시피저장소</string>

    <string name="recipeStorage">레시피\n저장소</string>
    <string name="recipeStorage2">레시피 저장소</string>

    <!-- bottom navigation -->
    <string name="fridge">나의냉장고</string>
    <string name="recipeSearch">레시피검색</string>
    <string name="myPage">마이페이지</string>

    <string name="scrapRecipe">스크랩 레시피</string>
    <string name="view_all">전체보기</string>

    <string name="youtube">유튜브</string>
    <string name="blog">블로그</string>
    <string name="recipe">추천</string>
    <string name="myRecipe">나만의 레시피</string>

    <!-- 영수증 -->
    <string name="input_receipt">영수증 입력</string>
    <string name="receipt_activity_default_tv">오늘 장본 그 물건\n영수증으로 편하게 등록해보세요!</string>
    <string name="clear_receipt">영수증 삭제</string>
    <string name="input_ingredients">나의 냉장고에 재료 등록</string>
    <string name="receipt_ingredient_list">영수증 식재료 목록</string>

    <!-- 에러 메시지 -->
    <string name="networkError">네트워크 연결 상태가 원활하지 않습니다.</string>

    <!-- 마이페이지 / 나만의레시피 / 생성 -->
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="save2">저장하기</string>
    <string name="title">제목</string>
    <string name="ingredientPick">재료</string>
    <string name="ingredientAddDirect">재료 직접 추가</string>
    <string name="ingredientPickDirect">재료 선택</string>
    <string name="ingredientAdd">요리 재료를 추가해주세요.</string>
    <string name="pleaseEnterTitle">제목을 입력해주세요.</string>
    <string name="pleaseEnterContent">내용을 입력해주세요.</string>
    <string name="myRecipeSaveComplete">나만의 레시피 저장이 완료되었습니다.</string>
    <string name="myRecipeCreate">나만의 레시피를 작성해보세요!</string>
    <string name="myRecipeCreatePlease">레시피 작성하기</string>
    <string name="capture_new_image">카메라</string>
    <string name="over_limit_msg">사진은 한 장만 선택할 수 있습니다.</string>
    <string name="yesCreate">예</string>
    <string name="noCreate">아니오</string>
    <string name="cancelCreate">작성을 취소하시겠어요?</string>
    <string name="cancelCreateMessage">작성 중인 내용은 저장되지 않아요.</string>

    <!-- 마이페이지 / 나만의레시피 / 수정 -->
    <string name="Modify">수정</string>
    <string name="myRecipeModify">나만의 레시피 수정</string>
    <string name="myRecipeModifyComplete">나만의 레시피 수정이 완료되었습니다.</string>

    <!-- 마이페이지 / 나만의레시피 / 삭제 -->
    <string name="delete">삭제</string>
    <string name="deleteMyRecipeMessage">해당 레시피가 삭제되었습니다.</string>
    <string name="deleteMyRecipeDialog">나만의 레시피 삭제</string>
    <string name="deleteMyRecipeDialogMessage1">삭제한 내용은 복구가 불가능합니다.</string>
    <string name="deleteMyRecipeDialogMessage2">나만의 레시피를 삭제하시겠습니까?</string>

    <!-- 마이페이지 / 프로필 수정 -->
    <string name="editProfile">프로필 이미지 변경</string>


    <!-- 나의 냉장고 / 홈 화면 -->
    <string name="my_fridge">나의 냉장고</string>
    <string name="product_name">상품명</string>
    <string name="product_cnt">수량</string>
    <string name="freshness">신선도</string>
    <string name="my_fridge_default_tv">나의 냉장고에 음식을 채워보세요!</string>
    <string name="update">편집</string>
    <string name="all_check">전체선택</string>

    <!-- 나의 냉장고 / 재료 선택 -->
    <string name="selectIngredient">재료</string>
    <string name="addDirect">직접 입력</string>
    <string name="all">전체</string>
    <string name="beef">육류</string>
    <string name="vegetable">채소</string>
    <string name="fruit">과일</string>
    <string name="aquaticProducts">수산물</string>
    <string name="seasoning">조미료</string>
    <string name="product">가공/유제품</string>
    <string name="etc">기타</string>
    <string name="searchIngredient">재료를 검색하세요.</string>
    <string name="next">다음</string>

    <!-- 나의 냉장고 / 직접입력 -->
    <string name="direct">직접입력</string>
    <string name="inputIngredient">재료를 입력해주세요.</string>
    <string name="category">카테고리</string>
    <string name="addIngredient">재료 추가하기</string>
    <string name="pickIcon">재료 아이콘 선택</string>
    <string name="directAddSuccess">냉장고 바구니에 재료가 담겼습니다!</string>
    <string name="addIngredientInFloating">재료 입력</string>

    <!-- 나의 냉장고 / 냉장고 바구니 -->
    <string name="basket">냉장고 바구니</string>
    <string name="basketExplain">유통기한과 보관방법을 선택해주세요!</string>
    <string name="refrigeration">냉장</string>
    <string name="frozen">냉동</string>
    <string name="roomTemperature">실온</string>
    <string name="fridgeSuccessMessage">냉장고에 재료를 담았습니다.</string>

    <!-- 냉장고 파먹기 -->
    <string name="empty_fridge_default">나의 냉장고가 비었습니다.\n냉장고에 음식을 담아보세요!</string>
    

    <!-- 레시피 검색 -->
    <string name="search_et_hint">레시피를 검색해보세요!</string>
    <string name="recent_keyword">최근 검색어</string>
    <string name="popular_keyword">인기 검색어</string>
    <string name="cancel_everything">전체삭제</string>
    <string name="count">개</string>
    <string name="save_btn">저장하기</string>
    <string name="middle_dot">·</string>
    <string name="over_hundred">100+</string>
    <string name="ingredients_exist">있는재료</string>
    <string name="ingredients_no">없는재료</string>


    <!-- 설정 -->
    <string name="help">고객지원</string>
    <string name="versionInfo">버전정보</string>
    <string name="newVersion">최신버전</string>
    <string name="newVersionValue">1.0.0</string>
    <string name="serviceSetting">서비스설정</string>
    <string name="pushAlarm">유통기한 알림 설정</string>
    <string name="developer">개발자 소개</string>
    <string name="contactUs">Contact Us</string>
    <string name="developerEmail">recipestorage2021@gmail.com</string>
    <string name="logOut">로그아웃</string>
    <string name="logOutSuccess">로그아웃이 완료되었습니다.</string>
    <string name="logOutConfirm">레시피 저장소를 로그아웃 하시겠어요?</string>
    <string name="deleteId">탈퇴</string>
    <string name="deleteIdDialog">탈퇴 시, 레시피 저장소에서 저장한 내용은 모두 삭제되며, 이후 복구가 불가능합니다.</string>
    <string name="deleteIdConfirmDialog">레시피저장소를 탈퇴하시겠습니까?</string>
    <string name="yes">확인</string>
    <string name="no">취소</string>
    <string name="deleteIdSuccess">레시피 저장소 탈퇴가 완료되었습니다.</string>
    <string name="thankYou">레시피 저장소를 이용해 주셔서 감사합니다.</string>
    <string name="moveSignIn">로그인화면으로 가기</string>
    <string name="offApp">레시피 저장소 종료하기</string>

    <!-- 스크랩 레시피 -->

    <!-- 영수증 입력 -->
    <string name="inputRecipe">영수증 입력</string>

    <!-- 알림 -->
    <string name="fcmChannelName">레저: 레시피 저장소</string>

    <string name="emptyFridge">냉장고파먹기</string>

    <!-- 오픈소스 -->
    <string name="openSource">오픈소스 라이선스</string>
    <string name="apache">Apache-2.0 License</string>

    <string name="privacy">개인정보처리방침</string>

    <string name="openSrcTitle1">Retrofit</string>
    <string name="openSrcLink1">https://github.com/square/retrofit</string>
    <string name="openSrcCopy1">Copyright 2013 Square, Inc.</string>

    <string name="openSrcTitle2">OkHttp</string>
    <string name="openSrcLink2">https://github.com/square/okhttp</string>
    <string name="openSrcCopy2">Copyright 2019 Square, Inc.</string>

    <string name="openSrcTitle3">Gson Converter</string>
    <string name="openSrcLink3">https://github.com/square/retrofit/tree/master/retrofit-converters/gson</string>
    <string name="openSrcCopy3">Copyright 2013 Square, Inc.</string>

    <string name="openSrcTitle4">Logging Interceptor</string>
    <string name="openSrcLink4">https://github.com/square/okhttp/tree/master/okhttp-logging-interceptor</string>
    <string name="openSrcCopy4">Copyright 2019 Square, Inc.</string>

    <string name="openSrcTitle5"></string>
    <string name="openSrcLink5"></string>
    <string name="openSrcCopy5"></string>

    <string name="openSrcTitle6"></string>
    <string name="openSrcLink6"></string>
    <string name="openSrcCopy6"></string>

    <string name="openSrcTitle7"></string>
    <string name="openSrcLink7"></string>
    <string name="openSrcCopy7"></string>

    <string name="openSrcTitle8"></string>
    <string name="openSrcLink8"></string>
    <string name="openSrcCopy8"></string>

    <string name="openSrcTitle9"></string>
    <string name="openSrcLink9"></string>
    <string name="openSrcCopy9"></string>

    <string name="openSrcTitle10"></string>
    <string name="openSrcLink10"></string>
    <string name="openSrcCopy10"></string>

    <string name="openSrcTitle11"></string>
    <string name="openSrcLink11"></string>
    <string name="openSrcCopy11"></string>

    <string name="openSrcTitle12"></string>
    <string name="openSrcLink12"></string>
    <string name="openSrcCopy12"></string>

    <string name="openSrcTitle13"></string>
    <string name="openSrcLink13"></string>
    <string name="openSrcCopy13"></string>

    <string name="openSrcTitle14"></string>
    <string name="openSrcLink14"></string>
    <string name="openSrcCopy14"></string>

    <string name="openSrcTitle15"></string>
    <string name="openSrcLink15"></string>
    <string name="openSrcCopy15"></string>

    <string name="openSrcTitle16"></string>
    <string name="openSrcLink16"></string>
    <string name="openSrcCopy16"></string>


</resources>