<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addDirect"
            android:textColor="@color/gray_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:src="@drawable/ic_close"
            android:text="@string/addDirect"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_add_icon"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_add_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_app_bar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_input_gredient"
        style="@style/Body1Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/gray_100"
        android:hint="@string/inputIngredient"
        android:inputType="text"
        android:textColorHint="@color/gray_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView21"
        style="@style/Subtitle2Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="@+id/et_input_gredient"
        app:layout_constraintTop_toBottomOf="@+id/et_input_gredient" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_category_beef"
        style="@style/ButtonStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/radius_14"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingBottom="6dp"
        android:text="@string/beef"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView21"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView21" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_category_vegetable"
        style="@style/ButtonStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/radius_14"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingBottom="6dp"
        android:text="@string/vegetable"
        app:layout_constraintStart_toEndOf="@+id/btn_category_beef"
        app:layout_constraintTop_toTopOf="@+id/btn_category_beef" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_category_fruit"
        style="@style/ButtonStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/radius_14"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingBottom="6dp"
        android:text="@string/fruit"
        app:layout_constraintStart_toEndOf="@+id/btn_category_vegetable"
        app:layout_constraintTop_toTopOf="@+id/btn_category_vegetable" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_category_aquaticProducts"
        style="@style/ButtonStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/radius_14"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingBottom="6dp"
        android:text="@string/aquaticProducts"
        app:layout_constraintStart_toEndOf="@+id/btn_category_fruit"
        app:layout_constraintTop_toTopOf="@+id/btn_category_fruit" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_category_seasoning"
        style="@style/ButtonStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/radius_14"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingBottom="6dp"
        android:text="@string/seasoning"
        app:layout_constraintStart_toStartOf="@+id/btn_category_beef"
        app:layout_constraintTop_toBottomOf="@+id/btn_category_beef" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_category_product"
        style="@style/ButtonStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/radius_14"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingBottom="6dp"
        android:text="@string/product"
        app:layout_constraintStart_toEndOf="@+id/btn_category_seasoning"
        app:layout_constraintTop_toTopOf="@+id/btn_category_seasoning" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_category_etc"
        style="@style/ButtonStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/radius_14"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingBottom="6dp"
        android:text="@string/etc"
        app:layout_constraintStart_toEndOf="@+id/btn_category_product"
        app:layout_constraintTop_toTopOf="@+id/btn_category_product" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_gredient"
        style="@style/ButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/radius_28"
        android:backgroundTint="@color/gray_000"
        android:clickable="false"
        android:text="@string/addIngredient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>