<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView10"
        style="@style/Head3Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="설정"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView11"
        style="@style/Subtitle2Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="39dp"
        android:text="@string/help"
        android:textColor="@color/gray_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView12"
        style="@style/Body1Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/versionInfo"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView11"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView11" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView17"
        style="@style/Body1Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/newVersionValue"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView12" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Subtitle2Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/newVersion"
        android:textColor="@color/gray_200"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView17"
        app:layout_constraintEnd_toStartOf="@+id/appCompatTextView17"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView17" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@color/gray_000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView12" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView14"
        style="@style/Subtitle2Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/serviceSetting"
        android:textColor="@color/gray_200"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView13"
        style="@style/Body1Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pushAlarm"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView14"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView14" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView13"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView13" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@color/gray_000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView13" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView15"
        style="@style/Body1Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/developer"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView16"
        style="@style/Body1Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/logOut"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView15"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView15" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_delete_id"
        style="@style/Body1Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/deleteId"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView16"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView16" />


</androidx.constraintlayout.widget.ConstraintLayout>