<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="320dp"
        android:layout_height="208dp"
        android:background="@color/white"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView18"
                style="@style/Subtitle1Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/deleteId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                style="@style/Subtitle2Style"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/deleteIdDialog"
                android:gravity="center"
                android:textColor="@color/gray_300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView18" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView20"
                style="@style/Subtitle2Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/deleteIdConfirmDialog"
                android:textColor="@color/gray_300"
                app:layout_constraintEnd_toEndOf="@+id/appCompatTextView19"
                app:layout_constraintStart_toStartOf="@+id/appCompatTextView19"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView19" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="50dp"
                android:background="@color/gray_000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/view6"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/gray_000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_yes"
                style="@style/ButtonStyle2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/yes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view6"
                app:layout_constraintTop_toTopOf="@+id/view5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_no"
                style="@style/ButtonStyle2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view5" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>